@@ -23,7 +23,7 @@ public class SBMLManagerTest {
 
     private SBMLManager manager;
 
-    private static final Long SUID = new Long(123);
+    private static final Long SUID = Long.valueOf(123);
     private static final SBMLDocument DOC = new SBMLDocument();
     private static final One2ManyMapping<String, Long> MAPPING = new One2ManyMapping<>();
 
